# satex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  satex.yaml
crates/core/: Cargo.toml
crates/core/benches/: canonicalize.rs
crates/core/src/: background.rs  body.rs  digest.rs  error.rs  executor.rs  expression.rs  lib.rs  make.rs
crates/core/src/component/: args.rs  configurable.rs  mod.rs
crates/core/src/extension/: client_addr.rs  mod.rs  raw_uri.rs  route_id.rs  url_params.rs
crates/core/src/util/: clone_service.rs  mod.rs  new_type.rs  path.rs  response.rs  try_downcast.rs  with.rs
crates/core/tests/: expression.rs  path.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: backend.rs  health_check.rs  lib.rs
crates/layer/: Cargo.toml  README.md
crates/layer/docs/: concurrency_limit.md  cors.md  remove_request_header.md  remove_response_header.md  set_method.md  set_prefix.md  set_request_header.md  set_response_header.md  set_status.md  strip_prefix.md  timeout.md
crates/layer/src/: concurrency_limit.rs  lib.rs  make.rs  remove_header.rs  set_header.rs  set_method.rs  set_status.rs  set_status_code.rs  timeout.rs  trace.rs
crates/layer/src/cors/: mod.rs  value.rs
crates/layer/src/remove_header/: mod.rs  remove_request_header.rs  remove_response_header.rs
crates/layer/src/set_prefix/: layer.rs  make.rs  mod.rs
crates/layer/src/strip_prefix/: layer.rs  make.rs  mod.rs
crates/layer/src/util/: mod.rs  set_policy.rs
crates/layer/tests/: identify.rs  remove_request_header.rs  remove_response_header.rs  set_method.rs  set_prefix.rs  set_request_header.rs  set_response_header.rs  set_status_code.rs  strip_prefix.rs
crates/load-balancer/: Cargo.toml
crates/load-balancer/src/: background.rs  discovery.rs  lib.rs  load_balancer.rs
crates/load-balancer/src/health_check/: health.rs  mod.rs
crates/load-balancer/src/resolver/: fixed.rs  make.rs  mod.rs  static.rs
crates/load-balancer/src/selector/: algorithm.rs  consistent.rs  mod.rs  weighted.rs
crates/load-balancer/tests/: discovery.rs
crates/load-balancing/: Cargo.toml
crates/load-balancing/src/: background.rs  discovery.rs  lib.rs  registry.rs
crates/load-balancing/src/health_check/: http.rs  tcp.rs
crates/load-balancing/src/selector/: mod.rs  weighted.rs
crates/load-balancing/tests/: discovery.rs
crates/macro/: Cargo.toml
crates/macro/src/: args.rs  configurable.rs  lib.rs  make.rs  symbol.rs  util.rs
crates/matcher/: Cargo.toml  README.md
crates/matcher/docs/: after.md  before.md  between.md  cookie.md  expression.md  header.md  host.md  method.md  path.md  query.md  remote_addr.md
crates/matcher/src/: cookie.rs  header.rs  host.rs  lib.rs  make.rs  method.rs  path.rs  query.rs  registry.rs  remote_addr.rs
crates/matcher/src/time/: after.rs  before.rs  between.rs  mod.rs
crates/matcher/tests/: cookie.rs  header.rs  host.rs  method.rs  query.rs  remote_addr.rs  util.rs
crates/server/: Cargo.toml
crates/server/src/: factory.rs  lib.rs  server.rs
crates/server/src/router/: mod.rs  route.rs
crates/service/: Cargo.toml  README.md
crates/service/docs/: echo.md  proxy.md  serve_dir.md
crates/service/src/: echo.rs  lib.rs  make.rs  serve_dir.rs  status_code.rs
crates/service/src/proxy/: client.rs  make.rs  mod.rs  service.rs
crates/service/tests/: echo.rs  proxy.rs  serve_dir.rs  status_code.rs  util.rs
satex-core/: Cargo.toml
satex-core/src/: apply.rs  endpoint.rs  error.rs  essential.rs  lib.rs  pattern.rs  registry.rs  task.rs
satex-core/src/config/: metadata.rs  mod.rs
satex-core/src/config/args/: complete.rs  mod.rs  shortcut.rs
satex-core/src/http/: body.rs  mod.rs
satex-core/src/macros/: make.rs  mod.rs
satex-core/src/serde/: http.rs  mod.rs  regex.rs  tot.rs  tracing.rs
satex-discovery/: Cargo.toml
satex-discovery/src/: lib.rs  registry.rs  selector.rs
satex-discovery/src/lb/: mod.rs  registry.rs
satex-discovery/src/lb/make/: ip_hash.rs  mod.rs  random.rs  sequential.rs  standby.rs  weight.rs
satex-discovery/src/make/: mod.rs
satex-discovery/src/make/builtin/: make.rs  mod.rs
satex-layer/: Cargo.toml
satex-layer/src/: lib.rs  registry.rs
satex-layer/src/make/: compression.rs  concurrency_limit.rs  mod.rs  request_body_limit.rs  set_mode.rs  set_status.rs  timeout.rs
satex-layer/src/make/cors/: complex.rs  make.rs  mod.rs
satex-layer/src/make/default/: make.rs  mod.rs  registry.rs  set_discovery.rs  set_http_client.rs  trace.rs
satex-layer/src/make/keep_host_header/: layer.rs  make.rs  mod.rs
satex-layer/src/make/path_strip/: layer.rs  make.rs  mod.rs
satex-layer/src/make/rate_limit/: layer.rs  make.rs  mod.rs
satex-layer/src/make/rewrite_path/: layer.rs  make.rs  mod.rs
satex-layer/src/make/set_header/: common.rs  mod.rs  request.rs  response.rs
satex-layer/src/make/set_path/: layer.rs  make.rs  mod.rs
satex-layer/src/make/set_query/: layer.rs  make.rs  mod.rs
satex-layer/src/make/x_forward/: layer.rs  make.rs  mod.rs
satex-matcher/: Cargo.toml
satex-matcher/src/: lib.rs  registry.rs
satex-matcher/src/make/: mod.rs  value.rs
satex-matcher/src/make/cookie/: make.rs  mod.rs
satex-matcher/src/make/header/: make.rs  mod.rs
satex-matcher/src/make/host/: make.rs  mod.rs
satex-matcher/src/make/method/: make.rs  mod.rs
satex-matcher/src/make/path/: make.rs  mod.rs
satex-matcher/src/make/path_regex/: make.rs  mod.rs
satex-matcher/src/make/path_starts_with/: make.rs  mod.rs
satex-matcher/src/make/query/: make.rs  mod.rs
satex-matcher/src/make/remote_addr/: make.rs  mod.rs
satex-matcher/src/make/time/: make.rs  mod.rs
satex-serve/: Cargo.toml  banner.txt
satex-serve/src/: acceptor.rs  app.rs  lib.rs  serve.rs
satex-serve/src/router/: make.rs  mod.rs
satex-serve/src/router/route/: builder.rs  make.rs  mod.rs
satex-service/: Cargo.toml
satex-service/src/: lib.rs  registry.rs
satex-service/src/make/: mod.rs  static.rs
satex-service/src/make/echo/: make.rs  mod.rs
satex-service/src/make/proxy/: keep_host_header.rs  make.rs  mod.rs
src/: app.rs  (+4 more)
(+82 files in other folders)
