[workspace]
resolver = "2"
members = [
    "satex-core",
    "satex-serve",
    "satex-layer",
    "satex-matcher",
    "satex-service",
    "satex-discovery",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
authors = ["w-sodalite@hotmail.com"]
readme = "README.md"
repository = "https://github.com/w-sodalite/satex.git"

[workspace.dependencies]
satex-core = { path = "satex-core", version = "0.2.0" }
satex-serve = { path = "satex-serve", version = "0.2.0" }
satex-layer = { path = "satex-layer", version = "0.2.0" }
satex-matcher = { path = "satex-matcher", version = "0.2.0" }
satex-service = { path = "satex-service", version = "0.2.0" }
satex-discovery = { path = "satex-discovery", version = "0.2.0" }

url = { version = "2.5" }
rand = { version = "0.8" }
hyper = { version = "1.0" }
bytes = { version = "1.5" }
tower = { version = "0.4" }
serde = { version = "1.0" }
tokio = { version = "1.34" }
regex = { version = "1.10" }
anyhow = { version = "1.0" }
chrono = { version = "0.4" }
tracing = { version = "0.1" }
futures = { version = "0.3" }
qstring = { version = "0.7" }
cookie = { version = "0.18" }
path-tree = { version = "0.7" }
serde_yaml = { version = "0.9" }
hyper-util = { version = "0.1" }
tower-http = { version = "0.5" }
http-serde = { version = "2.0" }
async-trait = { version = "0.1" }
lazy_static = { version = "1.4" }
sync_wrapper = { version = "0.1" }
leaky-bucket = { version = "1.0" }
aho-corasick = { version = "1.1" }
tokio-rustls = { version = "0.25" }
hyper-rustls = { version = "0.26" }
concat-idents = { version = "1.1" }
rustls-pemfile = { version = "2.0" }
http-body-util = { version = "0.1" }
pin-project-lite = { version = "0.2" }
rustls-pki-types = { version = "1.0" }
tracing-subscriber = { version = "0.3" }
serde-this-or-that = { version = "0.4" }

[workspace.metadata.release]
registry = "crates-io"
shared-version = true
consolidate-commits = true
pre-release-commit-message = "Release {{version}}"
tag-name = "v{{version}}"
allow-branch = ["master"]

[package]
name = "satex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "使用`RUST`开发的轻量、高性能的HTTP网关，基于`tokio`、`hyper`、`tower`构建。"
keywords = ["Gateway", "Router", "Http", "Proxy"]

[dependencies]
satex-core = { workspace = true }
satex-serve = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
strip = true
