[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/layer",
    "crates/macro",
    "crates/matcher",
    "crates/server",
    "crates/service",
]

[workspace.package]
edition = "2024"
version = "0.3.0"

[workspace.dependencies]
#
# satex dependencies
#
satex-core = { path = "crates/core" }
satex-layer = { path = "crates/layer" }
satex-matcher = { path = "crates/matcher" }
satex-service = { path = "crates/service" }
satex-macro = { path = "crates/macro" }
satex-server = { path = "crates/server" }

#
# third-party dependencies
#
actix-server = { version = "2.5" }
actix-service = { version = "2.0" }
actix-tls = { version = "3.4" }
async-trait = { version = "0.1" }
bytes = { version = "1.10" }
chrono = { version = "0.4" }
cookie = { version = "0.18" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
http = { version = "1.0" }
http-body = { version = "1.0" }
http-body-util = { version = "0.1" }
hyper = { version = "1.6" }
hyper-rustls = { version = "0.27" }
hyper-util = { version = "0.1" }
matchit = { version = "0.8" }
percent-encoding = { version = "2.3" }
pin-project-lite = { version = "0.2" }
qstring = { version = "0.7" }
regex = { version = "1.11" }
rustls = { version = "0.23" }
rustls-pemfile = { version = "2.2" }
rustls-pki-types = { version = "1.11" }
serde = { version = "1.0" }
serde_yaml = { version = "0.9" }
sync_wrapper = { version = "1.0" }
tokio = { version = "1.44" }
tokio-util = { version = "0.7" }
tower = { version = "0.5" }
tower-http = { version = "0.5" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
async-stream = { version = "*" }

[package]
name = "satex"
version.workspace = true
edition.workspace = true

[dependencies]
satex-core = { workspace = true }
satex-matcher = { workspace = true }
satex-layer = { workspace = true }
satex-service = { workspace = true }
satex-server = { workspace = true }

async-stream = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
strip = true