[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/load-balancer",
    "crates/layer",
    "crates/macro",
    "crates/matcher",
    "crates/server",
    "crates/service",
]

[workspace.package]
edition = "2024"
version = "0.4.1"
license = "MIT"
license-file = "LICENSE"
authors = ["w-sodalite@hotmail.com"]
readme = "README.md"
repository = "https://github.com/w-sodalite/satex.git"

[workspace.dependencies]
#
# satex dependencies
#
satex = { path = "." }
satex-core = { path = "crates/core" }
satex-layer = { path = "crates/layer" }
satex-macro = { path = "crates/macro" }
satex-matcher = { path = "crates/matcher" }
satex-server = { path = "crates/server" }
satex-service = { path = "crates/service" }
satex-load-balancer = { path = "crates/load-balancer" }

#
# third-party dependencies
#
actix-server = { version = "2.5" }
actix-service = { version = "2.0" }
actix-tls = { version = "3.4" }
arc-swap = { version = "1.7" }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
bytes = { version = "1.10" }
chrono = { version = "0.4" }
cookie = { version = "0.18" }
criterion = { version = "0.5" }
derivative = { version = "2.2" }
fnv = { version = "1.0" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
http = { version = "1.0" }
http-body = { version = "1.0" }
http-body-util = { version = "0.1" }
hyper = { version = "1.6" }
hyper-rustls = { version = "0.27" }
hyper-util = { version = "0.1" }
matchit = { version = "0.8" }
percent-encoding = { version = "2.3" }
pin-project-lite = { version = "0.2" }
qstring = { version = "0.7" }
rand = { version = "0.9" }
regex = { version = "1.11" }
rustls = { version = "0.23" }
rustls-pemfile = { version = "2.2" }
rustls-pki-types = { version = "1.11" }
serde = { version = "1.0" }
serde_yaml = { version = "0.9" }
sync_wrapper = { version = "1.0" }
tokio = { version = "1.44" }
tokio-util = { version = "0.7" }
tower = { version = "0.5" }
tower-http = { version = "0.5" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
pingora-ketama = { version = "0.4.0" }
url = { version = "*" }

[workspace.metadata.release]
registry = "crates-io"
shared-version = true
consolidate-commits = true
pre-release-commit-message = "Release {{version}}"
tag-name = "v{{version}}"
allow-branch = ["release"]

[package]
name = "satex"
description = "Satex Application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
satex-core = { workspace = true }
satex-layer = { workspace = true }
satex-matcher = { workspace = true }
satex-server = { workspace = true }
satex-service = { workspace = true }
satex-load-balancer = { workspace = true }

async-stream = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
strip = true
