[package]
name = "satex-core"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
http-serde = { workspace = true }
lazy_static = { workspace = true }
futures-util = { workspace = true }
sync_wrapper = { workspace = true }
concat-idents = { workspace = true }
http-body-util = { workspace = true }
pin-project-lite = { workspace = true }
serde-this-or-that = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true, features = ["backtrace"] }
tokio = { workspace = true, features = ["rt", "net", "time"] }