[package]
name = "satex-discovery"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satex-core = { path = "../satex-core" }
rand = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "sync", "net", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "io-util"] }