[package]
name = "satex-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Satex服务发现和负载均衡的接口定义以及通用实现"

[dependencies]
satex-core = { workspace = true }
rand = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "sync", "net", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
