[package]
name = "satex-layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Satex请求拦截接口定义和通用实现"

[dependencies]
satex-core = { workspace = true }
satex-service = { workspace = true }
satex-discovery = { workspace = true }
hyper = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
leaky-bucket = { workspace = true }
aho-corasick = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true, features = ["limit"] }
serde = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = [
    "limit",
    "set-header",
    "trace",
    "add-extension",
    "cors",
    "compression-full",
    "timeout"
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
