[package]
name = "satex-matcher"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satex-core = { path = "../satex-core" }
hyper = { workspace = true }
cookie = { workspace = true }
chrono = { workspace = true }
qstring = { workspace = true }
path-tree = { workspace = true }
serde = { workspace = true, features = ["derive"] }