[package]
name = "satex-matcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Satex请求匹配接口定义和通用实现"

[dependencies]
satex-core = { workspace = true }
hyper = { workspace = true }
cookie = { workspace = true }
chrono = { workspace = true }
qstring = { workspace = true }
path-tree = { workspace = true }
serde = { workspace = true, features = ["derive"] }
