[package]
name = "satex-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Satex服务初始化库"

[package.metadata.release]
pre-release-replacements = [
    { file = "banner.txt", search = "::v(.)+::", replace = "::v{{version}}::" },
]

[dependencies]
satex-core = { workspace = true }
satex-layer = { workspace = true }
satex-matcher = { workspace = true }
satex-service = { workspace = true }
hyper = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
pin-project-lite = { workspace = true }
tracing-subscriber = { workspace = true }
hyper-util = { workspace = true, features = ["server-auto"] }
