[package]
name = "satex-service"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satex-core = { path = "../satex-core" }
satex-discovery = { path = "../satex-discovery" }
serde = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
hyper-rustls = { workspace = true, features = ["http1", "http2"] }
hyper-util = { workspace = true, features = ["client", "http1", "http2"] }
