[package]
name = "satex-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Satex请求处理接口定义和通用实现"

[dependencies]
satex-core = { workspace = true }
satex-discovery = { workspace = true }
serde = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
hyper-rustls = { workspace = true, features = ["http1", "http2"] }
hyper-util = { workspace = true, features = ["client", "http1", "http2"] }
