[package]
name = "satex-core"
description = "Satex Core Library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
matchit = { workspace = true }
percent-encoding = { workspace = true }
pin-project-lite = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
sync_wrapper = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "canonicalize"
harness = false
