[package]
name = "satex-discovery"
edition.workspace = true
version.workspace = true
license.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
http = { workspace = true }
satex-core = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "sync"] }