[package]
name = "satex-layer"
description = "Satex Layer Library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
satex-core = { workspace = true }
satex-macro = { workspace = true }
satex-service = { workspace = true }

bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tower = { workspace = true, features = ["limit"] }
tower-http = { workspace = true, features = ["trace", "set-header", "timeout", "cors"] }
tracing = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
