[package]
name = "satex-load-balancing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
derivative = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
satex-core = { workspace = true }
tokio = { workspace = true, features = ["net", "time"] }
tracing = { workspace = true }
pingora-ketama = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }