[package]
name = "satex-macro"
description = "Satex Macro Library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
